--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.rabbitmq.password=guest
 rabbitmq.exchange=order.exchange
 rabbitmq.routing-key=order.created
 rabbitmq.queue=order.notifications
+
+spring.cloud.azure.servicebus.namespace=nedim-bus
+spring.cloud.azure.servicebus.entity-name=my-topic
+spring.cloud.azure.servicebus.entity-type=topic
+spring.cloud.azure.servicebus.processor.subscription-name=test-sub
+
+spring.cloud.azure.servicebus.connection-string=Endpoint=sb://nedim-bus.servicebus.windows.net/;SharedAccessKeyName=all-access;SharedAccessKey=BHumTrMK3uaanJsyoPqdoZYHlWlHgb/Mn+ASbBw8bmE=;EntityPath=my-topic
