--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
     ports:
       - "27017:27017"
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - "5672:5672"   # RabbitMQ broker
-      - "15672:15672" # RabbitMQ dashboard
+#  rabbitmq:
+#    image: rabbitmq:3-management
+#    ports:
+#      - "5672:5672"   # RabbitMQ broker
+#      - "15672:15672" # RabbitMQ dashboard
