--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 # RabbitMQ connection settings
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#
+#rabbitmq.order.queue=order.notifications
 
-rabbitmq.order.queue=order.notifications
+spring.cloud.azure.servicebus.namespace=nedim-bus
+spring.cloud.azure.servicebus.entity-name=my-topic
+spring.cloud.azure.servicebus.entity-type=topic
+spring.cloud.azure.servicebus.processor.subscription-name=test-sub
+
+spring.cloud.azure.servicebus.connection-string=Endpoint=sb://nedim-bus.servicebus.windows.net/;SharedAccessKeyName=all-access;SharedAccessKey=BHumTrMK3uaanJsyoPqdoZYHlWlHgb/Mn+ASbBw8bmE=;EntityPath=my-topic
