--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,18 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.azure.spring</groupId>
+				<artifactId>spring-cloud-azure-dependencies</artifactId>
+				<version>5.22.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.azure.spring</groupId>
+				<artifactId>spring-cloud-azure-starter-servicebus</artifactId>
+				<version>5.22.0</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.springdoc</groupId>
