Externalize Azure Service Bus properties to environment variables

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -6,9 +6,8 @@
 #
 #rabbitmq.order.queue=order.notifications
 
-spring.cloud.azure.servicebus.namespace=nedim-bus
-spring.cloud.azure.servicebus.entity-name=my-topic
-spring.cloud.azure.servicebus.entity-type=topic
-spring.cloud.azure.servicebus.processor.subscription-name=test-sub
-
-spring.cloud.azure.servicebus.connection-string=Endpoint=sb://nedim-bus.servicebus.windows.net/;SharedAccessKeyName=all-access;SharedAccessKey=BHumTrMK3uaanJsyoPqdoZYHlWlHgb/Mn+ASbBw8bmE=;EntityPath=my-topic
+spring.cloud.azure.servicebus.namespace=${AZURE_SERVICEBUS_NAMESPACE}
+spring.cloud.azure.servicebus.entity-name=${AZURE_SERVICEBUS_ENTITY_NAME}
+spring.cloud.azure.servicebus.entity-type=${AZURE_SERVICEBUS_ENTITY_TYPE}
+spring.cloud.azure.servicebus.processor.subscription-name=${AZURE_SERVICEBUS_SUBSCRIPTION_NAME}
+spring.cloud.azure.servicebus.connection-string=${AZURE_SERVICEBUS_CONNECTION_STRING}
